--- a/packages/vanilla-host/src/index.html
+++ b/packages/vanilla-host/src/index.html
@@ -7,8 +7,10 @@
 </head>
 <body>
   <div id="app">
+    <div id="header"></div>
     <div id="search"></div>
-    <div id="foods"></div>
+    <div id="count"></div>
+    <div id="books"></div>
   </div>
 </body>
 </html>
