working on host

--- a/packages/vanilla-host/src/index.html
+++ b/packages/vanilla-host/src/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1.0">
   <title>vanilla-host</title>
 </head>
+
 <body>
   <div id="app">
     <div id="header"></div>
-    <div id="search"></div>
-    <div id="count"></div>
-    <div id="books"></div>
+    <div class="container mx-auto">
+      <div class="mt-4 text-center">Hello From Vanilla App</div>
+    </div>
   </div>
 </body>
+
 </html>
